# my-claude-skills

./: claude-skills-guide.md  setup.sh
skills/codebase-map/: SKILL.md
skills/edit-and-commit/: SKILL.md
skills/review/: SKILL.md
skills/review-codebase/: SKILL.md
skills/review-pr/: SKILL.md
skills/setup-django/template/{{cookiecutter.project_slug}}/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  justfile  manage.py  pyproject.toml  pytest.ini
skills/setup-django/template/{{cookiecutter.project_slug}}/tests/: conftest.py  test_health.py
skills/setup-django/template/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
skills/setup-django/template/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/actions/: __init__.py
skills/setup-django/template/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/data/: __init__.py  apps.py
skills/setup-django/template/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/data/models/: __init__.py
skills/setup-django/template/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/interfaces/: __init__.py
skills/setup-django/template/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/interfaces/http/api/: __init__.py  urls.py  views.py
skills/setup-django/template/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/interfaces/management_commands/: __init__.py
skills/setup-django/template/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/readers/: __init__.py
(+3 files in other folders)
