[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14",
    "psycopg[binary]>=3.1",
    "dj-database-url>=2.1",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ipython>=8.0",
    "jupyterlab>=4.0",
    "ruff>=0.1",
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
]
